--- a/README.org
+++ b/README.org
@@ -48,6 +48,15 @@ its content.
 
 ** Mayo 2023
 
+*** 25-May-23
++ [[https://cacm.acm.org/magazines/2023/6/273222-the-silent-revolution-of-sat/fulltext][The silent (r)evolution of SAT]]. ~ Johannes K. Fichte, Daniel Le Berre, Markus Hecher, Stefan Szeider. #SAT
++ [[https://arxiv.org/abs/2305.15382][Theorem proving in Dependently-Typed Higher-Order Logic (Extended preprint)]]. ~ Colin Rothgang, Florian Rabe, Christoph Benzmüller. #ITP #HOL
++ [[https://byorgey.wordpress.com/2023/05/24/competitive-programming-in-haskell-parsing-with-an-nfa/][Competitive programming in Haskell: parsing with an NFA]]. ~ Brent Yorgey. #Haskell #FunctionalProgramming
++ [[https://arxiv.org/abs/2305.11202][Leveraging ChatGPT for power system programming tasks]]. ~ Ran Li, Chuanqing Pu, Feilong Fan, Junyi Tao, Yue Xiang. #ChatGPT #Programming
++ [[https://arxiv.org/abs/2305.14752][A new era in software security: Towards self-healing software via Large Language Models and formal verification]]. ~ Yiannis Charalambous, Norbert Tihanyi, Ridhi Jain, Youcheng Sun, Mohamed Amine Ferrag, Lucas C. Cordeiro. #LLMs #FormalVerification
++ [[https://arxiv.org/abs/2305.11294][Solving probability puzzles with logic toolkit]]. ~ Adrian Groza. #ATP #Prover9 #Mace4
++ [[https://arxiv.org/abs/2305.12524][TheoremQA: A Theorem-driven Question Answering dataset]]. ~ Wenhu Chen, Ming Yin, Max Ku, Pan Lu, Yixin Wan, Xueguang Ma, Jianyu Xu, Xinyi Wang, Tony Xia. #LLMs #Math
+
 *** 24-May-23
 + [[https://arxiv.org/abs/2305.13673][Physics of Language Models: Part 1, context-free grammar]]. ~ Zeyuan Allen-Zhu, Yuanzhi Li. #GPT
 + [[https://arxiv.org/abs/2305.13788][Can Large Language Models infer and disagree like humans?]] ~ Noah Lee, Na Min An, James Thorne. #LLMs
