--- a/README.org
+++ b/README.org
@@ -48,6 +48,9 @@ its content.
 
 ** Mayo 2023
 
+*** 28-May-23
++ [[https://www.theaustralian.com.au/commentary/big-tech-is-obscuring-the-greatest-heist-in-human-history/news-story/38ccd6871f173c1345c9053b5d167040 ][Big Tech is obscuring the ‘greatest heist’ in human history]]. ~ Toby Walsh (@TobyWalsh). #AI
+
 *** 27-May-23
 + [[https://adamtopaz.com/static/CommelinTopazAbstractionBoundaries.pdf][Abstraction boundaries and spec driven development in pure mathematics]]. ~ Johan Commelin, Adam Topaz. #ITP #LeanProver #Math
 + [[https://arxiv.org/abs/2305.15360][On program completion, with an application to the sum and product puzzle]]. ~ Vladimir Lifschitz. #ASP #LogicProgramming
