--- a/README.org
+++ b/README.org
@@ -49,6 +49,10 @@ its content.
 
 ** Junio 2023
 
+*** 10-Jun-23
++ [[http://dr.iiserpune.ac.in:8080/xmlui/handle/123456789/7818][Proved algorithms in geometric group theory]]. ~ Anand Rao Tadipatri. #ITP #LeanProver #Math
++ [[https://publik.tuwien.ac.at/files/publik_302699.pdf][Automated generation of exam sheets for automated deduction]]. ~ Petra Hozzová, Laura Kovács, Jakob Rath. #Logic #ATP #Teaching #Haskell #FunctionalProgramming
+
 *** 09-Jun-23
 + [[https://www.isa-afp.org/entries/Multirelations_Heterogeneous.html][Inner structure, determinism and modal algebra of multirelations (in Isabelle/HOL)]]. ~ Walter Guttmann, Georg Struth. #ITP #IsabelleHOL
 + [[https://arxiv.org/abs/2305.14825][Large Language Models are in-context semantic reasoners rather than symbolic reasoners]]. ~ Xiaojuan Tang, Zilong Zheng, Jiaqi Li, Fanxu Meng, Song-Chun Zhu, Yitao Liang, Muhan Zhang. #LLMs #Reasoning
